manifests/media/plexserver/resources/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: haproxy
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    name: plex-server
  name: plex-server-ing
spec:
  rules:
  - host: plex.mymarshall5.com
    http:
      paths:
      - backend:
          service:
            name: plex-tcp
            port:
              name: pms-web
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - plex.mymarshall5.com
    secretName: plex-mymarshall5-com
